--- a/my_tennis_club/members/templates/all_members.html
+++ b/my_tennis_club/members/templates/all_members.html
@@ -1,12 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="{% static 'myfirst.css' %}">
 <body>
 
 <h1>Members</h1>
   
 <ul>
   {% for x in mymembers %}
-    <li>{{ x.firstname }} {{ x.lastname }}</li>
+    <li><a href="details/{{ x.id }}">{{ x.firstname }} {{ x.lastname }}</a></li>
   {% endfor %}
 </ul>
 
